<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@mipmap/image_home"
            android:title="@string/home" />
    </group>
    <item
        android:id="@+id/nav_favorites"
        android:icon="@mipmap/image_favorites"
        android:title="@string/favorites" />
    <group
        android:id="@+id/nav_common"
        android:checkableBehavior="none"
        android:menuCategory="secondary">
        <item
            android:id="@+id/nav_score"
            android:icon="@mipmap/image_score"
            android:title="@string/score_encouragement" />
        <item
            android:id="@+id/nav_share"
            android:icon="@mipmap/image_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@mipmap/image_edit"
            android:title="@string/userfeedback" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@mipmap/image_about"
            android:title="@string/about_us" />
    </group>


</menu>
